<?xml version="1.0"?>
<package format="2">
  <name>kalman_filter</name>
  <version>0.0.0</version>
  <description>The kalman_filter package</description>

  <maintainer email="luminosa@todo.todo">luminosa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>keypoint_3d_matching_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <build_export_depend>keypoint_3d_matching_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>keypoint_3d_matching_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
